test/files/parser/errors/input.otest
name = "Assign to input from current scope"
line = 3
character = 5
error = 'An input already exists with the name "test".'

---

func(test: 0) = {
    test = 1
}

---

name = "Assign to input from parent scope"
line = 4
character = 9
error = 'An input already exists with the name "test".'

---

func(test: 0) = {
    func2() = {
        test = 1
    }
}
